--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <!-- PWA Meta Tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="ONECO - Your Eco-Friendly Companion" />
+  <meta name="description" content="ONECO - 똑똑해지는 경제 습관" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
 
   <!-- Web App Capable -->
   <meta name="mobile-web-app-capable" content="yes" />
