--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fonts-archive/BMHANNAPro/BMHANNAPro.css" type="text/css"/>
 
+<!-- OG Image -->
+<meta property="og:title" content="ONECO" />
+<meta property="og:description" content="ONECO - 똑똑해지는 경제 습관" /> 
+<meta property="og:image" content="/og-image.png" />
+<meta property="og:url" content="https://one-co.netlify.app" />
+
   <title>oneco</title>
 </head>
 
